LibTest: Add a suite of tests for the generators

--- a/Meta/Lagom/CMakeLists.txt
+++ b/Meta/Lagom/CMakeLists.txt
@@ -643,6 +643,7 @@ if (BUILD_LAGOM)
             LibMarkdown
             LibPDF
             LibSQL
+            LibTest
             LibTextCodec
             LibTTF
             LibTimeZone
